[package]
name = "price-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.7"
